# spectral_fun2

./: CMakeLists.txt  README.md  main.cpp  spectral_fun2.kdev4
